Fix horizontal scrollbar on header section in /ilm page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,7 @@
 }
 
 html {
+  width: 100%;
   overflow-x: hidden;
   max-width: 100vw;
 }
